--- a/theme/admin/dashboard.html
+++ b/theme/admin/dashboard.html
@@ -15,6 +15,7 @@
         <li><a href="#"><img src="https://avatars3.githubusercontent.com/u/2142787?v=3&s=40" alt="gravatar" class="avatar"/> fuxiaohei</a></li>
         <li class="current"><a href="">Articles</a></li>
         <li><a href="">Pages</a></li>
+        <li><a href="#">Comments <span class="num">12</span></a></li>
         <li><a href="">Themes</a></li>
         <li><a href="">Settings</a></li>
     </ul>
@@ -66,6 +67,14 @@
                     <span class="reads" style="width: 91.91%">6812</span>
                     <span class="comments" style="width:23.68%">36</span>
                 </li>
+            </ul>
+            <ul id="article-pager" class="admin-pager clear">
+                <li>Pages:</li>
+                <li><a href="#" class="current">1</a></li>
+                <li><a href="#">2</a></li>
+                <li><a href="#">3</a></li>
+                <li><a href="#">4</a></li>
+                <li><a href="#">5</a></li>
             </ul>
         </section>
     </div>
