finish login/logout controllers

--- a/theme/admin/login.html
+++ b/theme/admin/login.html
@@ -20,7 +20,7 @@
         </label>
         <label>
             <button class="button-save login-button" type="submit">Login</button>
-            <span class="login-remember"><input id="login-remember" type="checkbox" name="keep">&nbsp;&nbsp;Keep me logged in</span>
+            <span class="login-remember"><input id="login-remember" type="checkbox" name="keep" value="1">&nbsp;&nbsp;Keep me logged in</span>
         </label>
         <p class="login-question"><a href="/login/recover/">Forgotten Your Password?</a></p>
         {{.XsrfFormHtml}}
