use base controller, seperate admin/menu.html, begin article write page

--- a/theme/admin/profile.html
+++ b/theme/admin/profile.html
@@ -10,17 +10,7 @@
     <link rel="stylesheet" href="/theme/admin/css/admin.css"/>
 </head>
 <body>
-<nav id="admin-menu">
-    <ul>
-        <li><a href="/admin/profile"><img src="https://avatars3.githubusercontent.com/u/2142787?v=3&s=40" alt="gravatar" class="avatar"/> {{.AuthUser.Name}}</a></li>
-        <li class="current"><a href="">Articles</a></li>
-        <li><a href="">Pages</a></li>
-        <li><a href="#">Comments <span class="num">12</span></a></li>
-        <li><a href="">Themes</a></li>
-        <li><a href="">Settings</a></li>
-        <li class="out"><a href="/logout">Sign Out</a></li>
-    </ul>
-</nav>
+{{template "admin/menu.html" .}}
 <div id="admin-main">
     <div id="profile-wrapper">
         <header class="admin-main-header clearfix">
