add setting and media model, add login.html template

--- a/theme/default/index.html
+++ b/theme/default/index.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>posts</title>
+    <title>index.html</title>
     <link rel="stylesheet" href="/theme/default/semantic/semantic.min.css"/>
     <link rel="stylesheet" href="/theme/default/style.css"/>
     <script src="/theme/default/jquery/jquery-1.11.2.min.js"></script>
