add auth handler

--- a/theme/admin/login.html
+++ b/theme/admin/login.html
@@ -3,10 +3,10 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>login.html</title>
-    <link rel="stylesheet" href="/theme/default/semantic/semantic.min.css"/>
-    <link rel="stylesheet" href="/theme/default/admin/admin.css"/>
-    <script src="/theme/default/jquery/jquery-1.11.2.min.js"></script>
-    <script src="/theme/default/semantic/semantic.min.js"></script>
+    <link rel="stylesheet" href="/theme/admin/semantic/semantic.min.css"/>
+    <link rel="stylesheet" href="/theme/admin/admin.css"/>
+    <script src="/theme/admin/jquery/jquery-1.11.2.min.js"></script>
+    <script src="/theme/admin/semantic/semantic.min.js"></script>
 </head>
 <body>
 <div id="login-container" class="ui segment">
