finish admin profile page

--- a/theme/admin/dashboard.html
+++ b/theme/admin/dashboard.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>dashboard.html</title>
+    <title>{{.Title}}</title>
     <link rel="stylesheet" href="/theme/admin/semantic/semantic.min.css"/>
     <link rel="stylesheet" href="/theme/admin/admin.css"/>
     <script src="/theme/admin/jquery/jquery-1.11.2.min.js"></script>
