--- a/theme/admin/header.html
+++ b/theme/admin/header.html
@@ -1,18 +1,16 @@
 <header id="header" class="ui fixed main menu">
     <div class="container">
         <div class="item">
-            <h2 id="title">Dashboard</h2>
+            <h2 id="title">{{.Title}}</h2>
         </div>
-        <div class="item nav-item">
-            <a class="item" href="#">Dashboard</a>
-            <div class="ui dropdown item" data-content="writing contents">
+        <div class="item nav-item">{{if not .IsPage_Dashboard}}
+            <a class="item" href="/admin/dashboard">Dashboard</a>{{end}}<div class="ui dropdown item" data-content="writing contents">
                 <a href="#">Write<i class="dropdown icon"></i></a>
                 <div class="menu">
                     <a class="ui item" href="#">Article</a>
                     <a class="ui item" href="#">Page</a>
                 </div>
-            </div>
-            <div class="ui dropdown item" data-content="manage contents">
+            </div><div class="ui dropdown item" data-content="manage contents">
                 <a href="#">Manage<i class="dropdown icon"></i></a>
                 <div class="menu">
                     <a class="ui item" href="#">Content</a>
@@ -20,8 +18,7 @@
                     <a class="ui item" href="#">Comment</a>
                     <a class="ui item" href="#">Media</a>
                 </div>
-            </div>
-            <div class="ui dropdown item" data-content="site options">
+            </div><div class="ui dropdown item" data-content="site options">
                 <a href="#">Options<i class="dropdown icon"></i></a>
                 <div class="menu">
                     <a class="ui item" href="#">Setting</a>
@@ -34,7 +31,7 @@
         <div class="right item user-item">
             <a class="item" href="/admin/profile">
                 <img src="http://tp1.sinaimg.cn/1865987544/180/5697090972/1" alt="#" class="icon">
-                <span>Username</span>
+                <span>{{.AuthUser.Nick}}</span>
             </a>
             <a class="item" href="/logout" id="logout">Logout</a>
         </div>
