add admin taxnomy page, fix typo error

--- a/theme/admin/header.html
+++ b/theme/admin/header.html
@@ -14,7 +14,7 @@
                 <a href="#">Manage<i class="dropdown icon"></i></a>
                 <div class="menu">
                     <a class="ui item" href="#">Content</a>
-                    <a class="ui item" href="#">Taxonomy</a>
+                    <a class="ui item{{if .IsPage_Taxonomy}} active{{end}}" href="/admin/taxonomy">Taxonomy</a>
                     <a class="ui item" href="#">Comment</a>
                     <a class="ui item" href="#">Media</a>
                 </div>
